--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "Citrix-Javascript-Assessment",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A set of unit tests to assess the JS skills of applicants",
   "main": "index.js",
   "dependencies": {
-    "grunt": "~0.4.1",
-    "grunt-karma": "~0.4.5",
-    "chai": "~1.7.2"
+    "chai": "~1.7.2",
+    "karma": "^0.13.15"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
-  "license": "BSD"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "jasmine-core": "^2.4.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-junit-reporter": "^0.3.8",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-requirejs": "^0.2.2",
+    "phantomjs": "^1.9.19",
+    "requirejs": "^2.1.22"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Citrix-ShareFile/Citrix-Javascript-Assessment.git"
+  }
 }
